--- a/features/org.openhab.deps.test/.project
+++ b/features/org.openhab.deps.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhab.platform.runtime</name>
+	<name>org.openhab.deps.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
