--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
         <maven>3.0</maven>
     </prerequisites>
 
-    <groupId>org.openhab.platform</groupId>
+    <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
-    <name>openHAB Target Platform</name>
-    <description>This project contains the target platform for openHAB</description>
+    <name>openHAB Dependencies Repository</name>
+    <description>This project contains the dependency repository for openHAB</description>
 
     <organization>
         <name>openHAB.org</name>
@@ -45,9 +45,9 @@
     </properties>
 
     <modules>
-        <module>features/org.openhab.platform.runtime</module>
-        <module>features/org.openhab.platform.test</module>
-        <module>p2/org.openhab.platform.repository</module>
+        <module>features/org.openhab.deps.runtime</module>
+        <module>features/org.openhab.deps.test</module>
+        <module>p2/org.openhab.deps.repository</module>
     </modules>
 
     <build>
@@ -93,7 +93,7 @@
         </plugins>
     </build>
 
-    <!-- P2 Repositories used as a source to build the openHAB repository -->
+    <!-- P2 Repositories used as a source to build the openHAB deps repository -->
     <repositories>
         <repository>
             <id>p2-eclipse-orbit</id>
