--- a/features/org.openhab.deps.test/pom.xml
+++ b/features/org.openhab.deps.test/pom.xml
@@ -11,7 +11,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>org.openhab.deps.test</artifactId>
 
-  <name>openHAB Target Platform Test Feature</name>
+  <name>openHAB Test Dependencies Feature</name>
   <packaging>eclipse-feature</packaging>
 
 </project>
