--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -142,4 +142,28 @@
         </repository>
     </repositories>
 
+    <profiles>
+        <profile>
+            <id>prepare-release</id>
+            <!-- sample use: mvn -P prepare-release tycho-versions:set-version -DnewVersion=1.0.1-SNAPSHOT -->
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-versions-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <executions>
+                            <execution>
+                                <id>update-version</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>set-version</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
