--- a/p2/org.openhab.deps.repository/pom.xml
+++ b/p2/org.openhab.deps.repository/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openhab.deps</groupId>
 		<artifactId>pom</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
