--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -117,7 +117,7 @@
         </repository>
         <repository>
             <id>p2-jax-rs</id>
-            <url>http://hstaudacher.github.io/osgi-jax-rs-connector/5.2.0</url>
+            <url>http://hstaudacher.github.io/osgi-jax-rs-connector/5.3.0</url>
             <layout>p2</layout>
         </repository>
         <repository>
@@ -127,7 +127,7 @@
         </repository>
         <repository>
             <id>p2-jupnp</id>
-            <url>http://www.jupnp.org/update-site/2.1.0.RC1</url>
+            <url>http://www.jupnp.org/update-site/2.1.0</url>
             <layout>p2</layout>
         </repository>
         <repository>
