--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.12</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -98,6 +98,11 @@
             <groupId>org.openhab</groupId>
             <artifactId>nrjavaserial</artifactId>
             <version>3.12.0.OH</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.californium</groupId>
+            <artifactId>californium-osgi</artifactId>
+            <version>1.0.5</version>
         </dependency>
     </dependencies>
 
