--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.15</version>
+    <version>1.0.16</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -110,12 +110,12 @@
         </repository>
         <repository>
             <id>p2-eclipse-modeling-xtext</id>
-            <url>http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.9.2</url>
+            <url>http://download.eclipse.org/modeling/tmf/xtext/updates/releases/2.12.0/</url>
             <layout>p2</layout>
         </repository>
         <repository>
             <id>p2-eclipse-modeling-mwe</id>
-            <url>http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.8.3</url>
+            <url>http://download.eclipse.org/modeling/emft/mwe/updates/releases/2.9.1/</url>
             <layout>p2</layout>
         </repository>
         <repository>
@@ -124,13 +124,13 @@
             <layout>p2</layout>
         </repository>
         <repository>
-            <id>p2-eclipse-luna</id>
-            <url>http://download.eclipse.org/releases/luna/201502271000</url>
+            <id>p2-eclipse-oxygen</id>
+            <url>http://download.eclipse.org/releases/oxygen/</url>
             <layout>p2</layout>
         </repository>
         <repository>
-            <id>p2-eclipse-luna-updates</id>
-            <url>http://download.eclipse.org/eclipse/updates/4.4</url>
+            <id>p2-eclipse-oxygen-updates</id>
+            <url>http://download.eclipse.org/eclipse/updates/4.7</url>
             <layout>p2</layout>
         </repository>
         <repository>
