--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.27</version>
+    <version>1.0.28</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -95,9 +95,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.openhab</groupId>
+            <groupId>com.neuronrobotics</groupId>
             <artifactId>nrjavaserial</artifactId>
-            <version>3.12.0.OH</version>
+            <version>3.14.0</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
