--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.28</version>
+    <version>1.0.29</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -102,27 +102,42 @@
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee.dongle.cc2531</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee.dongle.ember</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee.dongle.telegesis</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee.dongle.xbee</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zsmartsystems.zigbee</groupId>
+            <artifactId>com.zsmartsystems.zigbee.console</artifactId>
+            <version>1.0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zsmartsystems.zigbee</groupId>
+            <artifactId>com.zsmartsystems.zigbee.console.ember</artifactId>
+            <version>1.0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zsmartsystems.zigbee</groupId>
+            <artifactId>com.zsmartsystems.zigbee.console.telegesis</artifactId>
+            <version>1.0.14</version>
         </dependency>
     </dependencies>
 
