--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.33</version>
+    <version>1.0.34</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -138,6 +138,11 @@
             <groupId>com.zsmartsystems.zigbee</groupId>
             <artifactId>com.zsmartsystems.zigbee.console.telegesis</artifactId>
             <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.5.2</version>
         </dependency>
     </dependencies>
 
