--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.37</version>
+    <version>1.0.38</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.openhab</groupId>
             <artifactId>nrjavaserial</artifactId>
-            <version>3.15.0.OH</version>
+            <version>3.15.0.OH2</version>
         </dependency>
         <dependency>
             <groupId>com.zsmartsystems.zigbee</groupId>
