--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.openhab.deps</groupId>
     <artifactId>pom</artifactId>
-    <version>1.0.40</version>
+    <version>1.0.41</version>
     <packaging>pom</packaging>
 
     <name>openHAB Dependencies Repository</name>
@@ -166,8 +166,8 @@
             <layout>p2</layout>
         </repository>
         <repository>
-            <id>p2-eclipse-photon-releases</id>
-            <url>http://download.eclipse.org/releases/photon</url>
+            <id>p2-eclipse-2019-03-releases</id>
+            <url>http://download.eclipse.org/releases/2019-03</url>
             <layout>p2</layout>
         </repository>
         <repository>
